Chinh sua file index, layout va them 2 trang DanhSachBaiViet, Login

--- a/DanhSachBaiViet.html
+++ b/DanhSachBaiViet.html
@@ -94,6 +94,96 @@
 	</header>
 	<!-- Header section end -->
 
+	<div class="page-top-info">
+		<div class="container">
+			<h4>DANH SÁCH CÁC BÀI VIẾT</h4>
+		</div>
+	</div>
+
+	<section class="category-section spad">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3 order-2 order-lg-1">
+					<div class="filter-widget">
+						<h2 class="fw-title">Categories</h2>
+						<ul class="category-menu">
+							<li><a href="#">Nông sản</a>
+								<ul class="sub-menu">
+									<li><a href="#">Lúa gạo<span>(2)</span></a></li>
+									<li><a href="#">Thịt<span>(56)</span></a></li>
+									<li><a href="#">Cà phê<span>(36)</span></a></li>
+									<li><a href="#">Tiêu<span>(27)</span></a></li>
+									<li><a href="#">Bánh kẹo<span>(19)</span></a></li>
+									<li><a href="#">Nước ngọt<span>(2)</span></a></li>
+									<li><a href="#">Sữa<span>(56)</span></a></li>
+									<li><a href="#">Thuốc lá<span>(36)</span></a></li>
+									<li><a href="#">Bia, rượu<span>(27)</span></a></li>
+								</ul>
+							</li>
+							<li><a href="#">Hải sản</a>
+								<ul class="sub-menu">
+									<li><a href="#">Cá biển<span>(2)</span></a></li>
+									<li><a href="#">Tôm<span>(56)</span></a></li>
+									<li><a href="#">Ghẹ<span>(36)</span></a></li>
+									<li><a href="#">Mực<span>(27)</span></a></li>
+									<li><a href="#">Bạch tuộc<span>(19)</span></a></li>
+									<li><a href="#">Sồ<span>(2)</span></a></li>
+									<li><a href="#">Nghêu<span>(56)</span></a></li>
+									<li><a href="#">Ốc<span>(36)</span></a></li>
+									<li><a href="#">Hàu<span>(27)</span></a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+					<div class="filter-widget">
+						<h2 class="fw-title">Tags</h2>
+						<ul class="category-menu">
+							<li><a href="#">Tag 1</a>
+								<ul class="sub-menu">
+									<li><a href="#">Tag<span>(2)</span></a></li>
+								</ul>
+							</li>
+							<li><a href="#">Tag 2</a>
+								<ul class="sub-menu">
+									<li><a href="#">Tag<span>(2)</span></a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>	
+		</div>
+	</section>
+
+	<div class="filter-widget mb-0">
+						<h2 class="fw-title">Size</h2>
+						<div class="fw-size-choose">
+							<div class="sc-item">
+								<input type="radio" name="sc" id="xs-size" checked="">
+								<label for="xs-size">1</label>
+							</div>
+							<div class="sc-item">
+								<input type="radio" name="sc" id="s-size">
+								<label for="s-size">2</label>
+							</div>
+							<div class="sc-item">
+								<input type="radio" name="sc" id="m-size">
+								<label for="m-size">3</label>
+							</div>
+							<div class="sc-item">
+								<input type="radio" name="sc" id="l-size">
+								<label for="l-size">4</label>
+							</div>
+							<div class="sc-item">
+								<input type="radio" name="sc" id="xl-size">
+								<label for="xl-size">5</label>
+							</div>
+							<div class="sc-item">
+								<label for="xxl-size">...</label>
+							</div>
+						</div>
+					</div>
+
 	<section class="top-letest-product-section">
 		<div class="container">
 			<!-- code here -->
