chinh sua file index.html va file style-1.css

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 						    <a href="#"><h5 class="card-title tieude">Mùa thu hoạch dâu, nông dân Hà Nội kiếm tiền triệu mỗi ngày.</h5></a>
 						    <p class="card-text">24/10/2018</p>
 						    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Nông sản</h6>
+						   	<p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 						  </div>
 						</div>
 					</div>
@@ -167,6 +168,7 @@
 						    <a href="#"><h5 class="card-title tieude">Giá heo vẫn hơi khó lường trong những ngày qua</h5></a>
 						    <p class="card-text">17/03/2019</p>
 						    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Nông sản</h6>
+						    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 						  </div>
 						</div>
 					</div>
@@ -179,6 +181,7 @@
 						    <a href="#"><h5 class="card-title tieude">Ngày càng có ít rau sạch</h5></a>
 						    <p class="card-text">24/10/2018</p>
 						    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Nông sản</h6>
+						    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 						  </div>
 						</div>
 					</div>
@@ -191,6 +194,7 @@
 						    <a href="#"><h5 class="card-title tieude">Cá biển ngày càng lên giá</h5></a>
 						    <p class="card-text">24/10/2018</p>
 						    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+						    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 						  </div>
 						</div>
 					</div>
@@ -215,6 +219,7 @@
 					    <a href="#"><h5 class="card-title tieude">Đánh bắt mực ngày càng khó khăn hơn cho ngư dân,</h5></a>
 					    <p class="card-text">14/04/2019</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -225,6 +230,7 @@
 					    <a href="#"><h5 class="card-title tieude">Ngày càng nhiều người dân Tây Nguyên bỏ trồng cafe</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -235,6 +241,7 @@
 					    <a href="#"><h5 class="card-title tieude">Giá thuốc lá ngày càng giảm</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -245,6 +252,7 @@
 					    <a href="#"><h5 class="card-title tieude">Sản xuất gạo ở Đồng bằng sông cửu long đang thu hoạch</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -255,6 +263,7 @@
 					    <a href="#"><h5 class="card-title tieude">Bia được sử dụng nhiều hơn tại các tỉnh miền Đông Nam Bộ</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -277,6 +286,7 @@
 					    <a href="#"><h5 class="card-title tieude">Đánh bắt mực ngày càng khó khăn hơn cho ngư dân,</h5></a>
 					    <p class="card-text">14/04/2019</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -287,6 +297,7 @@
 					    <a href="#"><h5 class="card-title tieude">Ngày càng nhiều người dân Tây Nguyên bỏ trồng cafe</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -297,6 +308,7 @@
 					    <a href="#"><h5 class="card-title tieude">Giá thuốc lá ngày càng giảm</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -307,6 +319,7 @@
 					    <a href="#"><h5 class="card-title tieude">Sản xuất gạo ở Đồng bằng sông cửu long đang thu hoạch</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -317,6 +330,7 @@
 					    <a href="#"><h5 class="card-title tieude">Bia được sử dụng nhiều hơn tại các tỉnh miền Đông Nam Bộ</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -339,6 +353,7 @@
 					    <a href="#"><h5 class="card-title tieude">Đánh bắt mực ngày càng khó khăn hơn cho ngư dân,</h5></a>
 					    <p class="card-text">14/04/2019</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -349,6 +364,7 @@
 					    <a href="#"><h5 class="card-title tieude">Ngày càng nhiều người dân Tây Nguyên bỏ trồng cafe</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -359,6 +375,7 @@
 					    <a href="#"><h5 class="card-title tieude">Giá thuốc lá ngày càng giảm</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -369,6 +386,7 @@
 					    <a href="#"><h5 class="card-title tieude">Sản xuất gạo ở Đồng bằng sông cửu long đang thu hoạch</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
@@ -379,6 +397,7 @@
 					    <a href="#"><h5 class="card-title tieude">Bia được sử dụng nhiều hơn tại các tỉnh miền Đông Nam Bộ</h5></a>
 					    <p class="card-text">24/10/2018</p>
 					    <h6 class="card-subtitle mb-2 text-muted">Chuyên mục: Hải sản</h6>
+					    <p style="color: black; text-align: justify;">Ngày nay người sử dụng đồ dùng ngày nhiều thế nên cần phải chú ý trong việc tiêu dùng các thực phẩm chức năng... </p>
 					  </div>
 					</div>
 				</div>
