--- a/QuenMatKhau.html
+++ b/QuenMatKhau.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HCMUSExpress</title>
+	<title>Quên mật khẩu</title>
 	<meta charset="UTF-8">
 	<meta name="description" content=" Divisima | eCommerce Template">
 	<meta name="keywords" content="divisima, eCommerce, creative, html">
