--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HCMUSExpress</title>
+	<title>Trang chủ</title>
 	<meta charset="UTF-8">
 	<meta name="description" content=" Divisima | eCommerce Template">
 	<meta name="keywords" content="divisima, eCommerce, creative, html">
@@ -61,6 +61,7 @@
 			<div class="container">
 				<!-- menu -->
 				<ul class="main-menu">
+					<li><a href="#">KINH DOANH</a></li>
 					<li><a href="#">Nông sản</a>
 						<span class="new">New</span>
 						<ul class="sub-menu">
