--- a/DanhSachBaiViet.html
+++ b/DanhSachBaiViet.html
@@ -52,7 +52,7 @@
 						<div class="user-panel">
 							<div class="up-item">
 								<i class="flaticon-profile"></i>
-								<a href="#">Sign In</a>
+								<a href="login.html">Sign In</a>
 							</div>
 						</div>
 					</div>
@@ -63,10 +63,10 @@
 			<div class="container">
 				<!-- menu -->
 				<ul class="main-menu">
-					<li><a href="#">KINH DOANH</a></li>
-					<li><a href="#">Nông sản</a>
+					<li><a href="DanhSachBaiViet.html">KINH DOANH</a></li>
+					<li><a href="DanhSachBaiViet.html">Nông sản</a>
 						<ul class="sub-menu">
-							<li><a href="#">Lúa gạo</a></li>
+							<li><a href="DanhSachBaiViet.html">Lúa gạo</a></li>
 							<li><a href="#">Thịt</a></li>
 							<li><a href="#">Cà phê</a></li>
 							<li><a href="#">Tiêu</a></li>
@@ -77,7 +77,7 @@
 							<li><a href="#">Bia, rượu</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Hải sản</a>
+					<li><a href="DanhSachBaiViet.html">Hải sản</a>
 						<ul class="sub-menu">
 							<li><a href="#">Cá biển</a></li>
 							<li><a href="#">Tôm</a></li>
@@ -110,10 +110,10 @@
 					<h2 class="fw-title">Categories</h2>
 					<ul class="category-menu">
 						<li><a href="#" style="font-weight: bold; font-size: 13px;">KINH DOANH</a></li>
-						<li class="danhsachKD"><a href="#">Nông sản</a>
+						<li class="danhsachKD"><a href="XemChiTiet.html">Nông sản</a>
 							<ul class="sub-menu">
-								<li><a href="#">Lúa gạo<span>(2)</span></a></li>
-								<li><a href="#">Thịt<span>(56)</span></a></li>
+								<li><a href="XemChiTiet.html">Lúa gạo<span>(2)</span></a></li>
+								<li><a href="XemChiTiet.html">Thịt<span>(56)</span></a></li>
 								<li><a href="#">Cà phê<span>(36)</span></a></li>
 								<li><a href="#">Tiêu<span>(27)</span></a></li>
 								<li><a href="#">Bánh kẹo<span>(19)</span></a></li>
@@ -123,9 +123,9 @@
 								<li><a href="#">Bia, rượu<span>(27)</span></a></li>
 							</ul>
 						</li>
-						<li class="danhsachKD"><a href="#">Hải sản</a>
+						<li class="danhsachKD"><a href="XemChiTiet.html">Hải sản</a>
 							<ul class="sub-menu">
-								<li><a href="#">Cá biển<span>(2)</span></a></li>
+								<li><a href="XemChiTiet.html">Cá biển<span>(2)</span></a></li>
 								<li><a href="#">Tôm<span>(56)</span></a></li>
 								<li><a href="#">Ghẹ<span>(36)</span></a></li>
 								<li><a href="#">Mực<span>(27)</span></a></li>
@@ -157,11 +157,11 @@
 		    			<img src="img/product/3.jpg" >	
 		    		</div>
 		    		<div class="col-8 thongtindanhsach">
-		    			<p class="tieudedanhsach"><a href="#">Nhiều người dân đang đổ xô đi trồng tiêu</a></p>
+		    			<p class="tieudedanhsach"><a href="XemChiTiet.html">Nhiều người dân đang đổ xô đi trồng tiêu</a></p>
 		    			<p class="chuyenmuc">Chuyên mục: Nông sản</p>
 		    			<p class="ngay">24/10/1997</p>
 		    			<p class="abstract">Doanh thu tiêu đang ngày càng tăng nên các hộ gia đình đang đổ xô đi trồng tiêu mỗi ngày.</p>
-		    			<p class="tag"><b>Tags: </b> <a href="#">kinhdoanh, </a> <a href="#">trongtrot</a></p>
+		    			<p class="tag"><b>Tags: </b> <a href="XemChiTiet.html">kinhdoanh, </a> <a href="XemChiTiet.html">trongtrot</a></p>
 		    		</div>
 		    	</div>
 
