--- a/QuenMatKhau.html
+++ b/QuenMatKhau.html
@@ -34,7 +34,7 @@
 					</span>
 					 <div class="form-group row">
 					   	<span class="label-input100">Email</span>
-					    <input class="input100" type="text" name="username" placeholder="Nhập email xác nhận">
+					    <input class="input100" type="email" name="username" placeholder="Nhập email xác nhận">
 
 					</div>
 	
