--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<div class="user-panel">
 							<div class="up-item">
 								<i class="flaticon-profile"></i>
-								<a href="#">Sign In</a>
+								<a href="login.html">Sign In</a>
 							</div>
 						</div>
 					</div>
@@ -61,27 +61,27 @@
 			<div class="container">
 				<!-- menu -->
 				<ul class="main-menu">
-					<li><a href="#">KINH DOANH</a></li>
-					<li><a href="#">Nông sản</a>
+					<li><a href="DanhSachBaiViet.html">KINH DOANH</a></li>
+					<li><a href="DanhSachBaiViet.html">Nông sản</a>
 						<span class="new">New</span>
 						<ul class="sub-menu">
-							<li><a href="#">Lúa gạo</a></li>
-							<li><a href="#">Thịt</a></li>
-							<li><a href="#">Cà phê</a></li>
-							<li><a href="#">Tiêu</a></li>
-							<li><a href="#">Bánh kẹo</a></li>
+							<li><a href="DanhSachBaiViet.html">Lúa gạo</a></li>
+							<li><a href="DanhSachBaiViet.html">Thịt</a></li>
+							<li><a href="DanhSachBaiViet.html">Cà phê</a></li>
+							<li><a href="DanhSachBaiViet.html">Tiêu</a></li>
+							<li><a href="DanhSachBaiViet.html">Bánh kẹo</a></li>
 							<li><a href="#">Nước ngọt</a></li>
 							<li><a href="#">Sữa</a></li>
 							<li><a href="#">Thuốc lá</a></li>
 							<li><a href="#">Bia, rượu</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Hải sản</a>
+					<li><a href="DanhSachBaiViet.html">Hải sản</a>
 						<ul class="sub-menu">
-							<li><a href="#">Cá biển</a></li>
-							<li><a href="#">Tôm</a></li>
-							<li><a href="#">Ghẹ</a></li>
-							<li><a href="#">Mực</a></li>
+							<li><a href="DanhSachBaiViet.html">Cá biển</a></li>
+							<li><a href="DanhSachBaiViet.html">Tôm</a></li>
+							<li><a href="DanhSachBaiViet.html">Ghẹ</a></li>
+							<li><a href="DanhSachBaiViet.html">Mực</a></li>
 							<li><a href="#">Bạch tuộc</a></li>
 							<li><a href="#">Sò</a></li>
 							<li><a href="#">Nghêu</a></li>
