--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HCMUSExpress</title>
+	<title>Đăng nhập</title>
 	<meta charset="UTF-8">
 	<meta name="description" content=" Divisima | eCommerce Template">
 	<meta name="keywords" content="divisima, eCommerce, creative, html">
@@ -43,7 +43,7 @@
 
 					</div>
 					<div class="text-right p-t-8 p-b-31">
-						<a href="#">
+						<a href="QuenMatKhau.html">
 							Forgot password?
 						</a>
 					</div>
